<resources>
    <string name="app_name">Star Wrobs</string>

    <string name="menu_refresh">Refresh data</string>
    <string name="menu_delete_data">Delete data</string>

    <string name="ui_tab_people">People</string>
    <string name="ui_tab_films">Films</string>
    <string name="ui_tab_planets">Planets</string>
    <string name="ui_tab_species">Species</string>
    <string name="ui_tab_starships">Starships</string>
    <string name="ui_tab_vehicles">Vehicles</string>

    <string name="ui_details_title">Details</string>


    <string name="ui_detail_people_name">Name</string>
    <string name="ui_detail_people_height">Height</string>
    <string name="ui_detail_people_mass">Mass</string>
    <string name="ui_detail_people_hair_color">Hair color</string>
    <string name="ui_detail_people_skin_color">Skin color</string>
    <string name="ui_detail_people_eye_color">Eye color</string>
    <string name="ui_detail_people_birth_year">Birth year</string>
    <string name="ui_detail_people_gender">Gender</string>
    <string name="ui_detail_people_homeworld">Homeworld</string>
    <string name="ui_cast_title">Cast</string>
    <string name="ui_detail_film_title">Title</string>
    <string name="ui_detail_film_episode_id">Episode number</string>
    <string name="ui_detail_film_release_date">Release date</string>
    <string name="ui_detail_film_director">Director</string>
    <string name="ui_detail_film_producer">Producer</string>
    <string name="ui_detail_film_opening_crawl">Opening crawl</string>
    <string name="ui_card_characters">Characters</string>
    <string name="ui_detail_planets_name">Name</string>
    <string name="ui_detail_planets_rotation_period">Rotation period</string>
    <string name="ui_detail_planets_orbital_period">Orbital period</string>
    <string name="ui_detail_planets_diameter">Diameter</string>
    <string name="ui_detail_planets_climate">Climate</string>
    <string name="ui_detail_planets_gravity">Gravity</string>
    <string name="ui_detail_planets_terrain">Terrain</string>
    <string name="ui_detail_planets_surface_water">Surface water</string>
    <string name="ui_detail_planets_population">Population</string>
    <string name="ui_card_residents">Residents</string>

</resources>
