<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            android:id="@+id/card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_major"
            android:paddingTop="@dimen/spacing_minor">

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_people_name" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_people_height" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_people_mass" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_hair_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_people_hair_color" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_skin_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_people_skin_color" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_eye_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_people_eye_color" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_people_gender" />

            <com.guillaume.starwrobs.widget.DetailInfoLayout
                android:id="@+id/layout_info_homeworld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_micro"
                app:title="@string/ui_detail_people_homeworld" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>